Closed Bug 1358726 Opened 9 years ago Closed 9 years ago

Crash in mozilla::MediaCache::AllocateAndWriteBlock

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: jseward, Assigned: jwwang)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-6327caeb-d7eb-4579-a796-72e970170421. ============================================================= This is ranked #11 in the Windows crashes for Nightly 20170420030346.
Flags: needinfo?(jwwang)
This regression may have been introduced by patch [1] to fix bug 1357244. [1] https://hg.mozilla.org/mozilla-central/rev?node=96e7a9cb5588327eba8dfa772b9675d350aea546
Blocks: 1357244
Keywords: regression
Whiteboard: [clouseau]
Attachment #8860747 - Flags: review?(gsquelart)
Assignee: nobody → jwwang
Comment on attachment 8860747 [details] Bug 1358726 - fix the assertion failure in AllocateAndWriteBlock(). https://reviewboard.mozilla.org/r/132668/#review135526
Attachment #8860747 - Flags: review?(gsquelart) → review+
Thanks!
Flags: needinfo?(jwwang)
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d62218969e31 fix the assertion failure in AllocateAndWriteBlock(). r=gerald
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: