Bug 1358726 - fix the assertion failure in AllocateAndWriteBlock(). r=gerald

block->mOwners might be empty if all streams for the resource id are
closed. We don't bother write the data to the cache since there is no
stream to use it.

MozReview-Commit-ID: KKiyZqLBjim

--HG--
extra : rebase_source : 7fa0a6d841dff91dd7142aac5a336b950342ac67